--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <div style="position: fixed;bottom: 10px;left: 50%;transform: translateX(-50%);">
       <a href="https://beian.miit.gov.cn/" target="_blank">备案号</a>
     </div>
+    <script type="text/javascript" src="./src/assets/js/change.js"></script>
+    <script type="text/javascript" src="./src/assets/json/images.json?cb=getBingImages"></script>
   </body>
 </html>
